--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="coutdown/simplyCountdown.min.js"></script>
     <!-- Bootstrap Icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-   <link rel="stylesheet" href="Style.css">
+   <link rel="stylesheet" href="style.css">
   </head>
   <body>
     
